Fixed navbar z-index

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -18,6 +18,7 @@
 
 .navbar-fixed {
     top: 51px;
+    z-index: 10;
 }
 
 #content {
